# rest-rs

./: Cargo.toml  README.md  settings.json
src/: error.rs  lib.rs  main.rs  settings.rs
src/app/: handlers.rs  models.rs
src/handlers/: echo.rs  mod.rs  user.rs
tests/: integration_test.rs
